force-app/main/default/objects/Google_Auth_Plugin__mdt/Google_Auth_Plugin__mdt.object-meta.xml
<CustomObject>
    <label>Google Auth Plugin</label>
    <pluralLabel>Google Auth Plugin</pluralLabel>
</CustomObject>