force-app/main/default/objects/Google_Auth_Plugin__mdt/fields/AuthorizeEndpointURL__c.field-meta.xml
<CustomField>
    <fullName>AuthorizeEndpointURL__c</fullName>
    <label>Authorize Endpoint URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>