force-app/main/default/objects/Google_Auth_Plugin__mdt/fields/ConsumerSecret__c.field-meta.xml
<CustomField>
    <fullName>ConsumerSecret__c</fullName>
    <label>Consumer Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>