force-app/main/default/objects/Google_Auth_Plugin__mdt/fields/RedirectURL__c.field-meta.xml
<CustomField>
    <fullName>RedirectURL__c</fullName>
    <label>Redirect URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>