force-app/main/default/objects/Google_Auth_Plugin__mdt/fields/TokenEndpointURL__c.field-meta.xml
<CustomField>
    <fullName>TokenEndpointURL__c</fullName>
    <label>Token Endpoint URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>