force-app/main/default/objects/Google_Auth_Plugin__mdt/fields/UserInfoEndpointURL__c.field-meta.xml
<CustomField>
    <fullName>UserInfoEndpointURL__c</fullName>
    <label>User Info Endpoint URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>